# echotrace-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  security.yml
echotrace/: __init__.py  cli.py  config.py
echotrace/analyzers/: __init__.py  llm_probe.py  signal.py  transcription.py
echotrace/core/: __init__.py  aggregator.py  orchestrator.py  telemetry.py
echotrace/fixtures/: generator.py
echotrace/presentation/: cli_display.py
echotrace/providers/: __init__.py  base.py  groq.py  huggingface.py  mock.py  ollama.py  resolver.py
echotrace/tui/: __init__.py  app.py
echotrace/tui/screens/: __init__.py  main.py
echotrace/tui/styles/: app.tcss  scorecard.tcss  transcript_diff.tcss  variables.tcss  waterfall.tcss
echotrace/tui/widgets/: __init__.py  scorecard.py  transcript_diff.py  waterfall.py
tests/: test_signal.py  test_wer.py
