[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echotrace"
version = "0.1.0"
description = "The Voice AI Reliability Profiler — Chrome DevTools Network Tab, but for Audio."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "EchoTrace Contributors"}
]
keywords = ["voice-ai", "observability", "stt", "latency", "profiler", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "faster-whisper>=0.10.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "jiwer>=3.0.0",
    "requests>=2.28.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
ollama = ["ollama>=0.3.0"]
hf = ["huggingface-hub>=0.20.0"]
all = [
    "ollama>=0.3.0",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
echotrace = "echotrace.cli:app"

[tool.setuptools.packages.find]
include = ["echotrace*"]
