[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echotrace"
version = "0.1.0"
description = "Voice AI reliability profiler — diagnose latency and transcription errors in your pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "EchoTrace Contributors" }
]
keywords = [
    "voice-ai", "speech", "stt", "whisper",
    "diagnostics", "observability", "latency",
    "wer", "transcription", "tui"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer[all]>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "faster-whisper>=0.10",
    "groq>=0.4",
    "jiwer>=3.0.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "requests>=2.28.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ollama = [
    "ollama>=0.3.0",
]
huggingface = [
    "huggingface-hub>=0.20",
]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
]
test-real = [
    "echotrace[test]",
    "datasets>=2.14",
    "tqdm>=4.65",
]
dev = [
    "echotrace[test]",
    "ruff>=0.1.0",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "build>=1.0",
    "twine>=4.0",
]
all = [
    "ollama>=0.3.0",
    "huggingface-hub>=0.20",
]

[project.scripts]
echotrace = "echotrace.cli:app"

[project.urls]
Homepage = "https://github.com/priyavratuniyal/echotrace-cli"
Repository = "https://github.com/priyavratuniyal/echotrace-cli"
"Bug Tracker" = "https://github.com/priyavratuniyal/echotrace-cli/issues"
Changelog = "https://github.com/priyavratuniyal/echotrace-cli/blob/main/CHANGELOG.md"
Documentation = "https://github.com/priyavratuniyal/echotrace-cli#readme"

[tool.hatch.build.targets.wheel]
packages = ["echotrace"]

[tool.hatch.build.targets.wheel.force-include]
"echotrace/data/demo.wav" = "echotrace/data/demo.wav"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=echotrace --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
